[metadata]
name = pytrexio666
version = 0.1
author = TREX-CoE
description = Python API of the TREXIO library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TREX-CoE/trexio
project_urls =
    Bug Tracker = https://github.com/TREX-CoE/trexio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

