(lang dune 3.1)

(name trexio)
(version 2.2.0)

(generate_opam_files true)

(source
 (github trex-coe/trexio_ocaml))

(authors
  "Anthony Scemama <scemama@irsamc.ups-tlse.fr>"
  "Evgeny Posenitskiy <posenitskiy@irsamc.ups-tlse.fr>"
)

(maintainers
  "Anthony Scemama <scemama@irsamc.ups-tlse.fr>"
)

(license "BSD-3-Clause")

(documentation "https://trex-coe.github.io/trexio/")

(package
 (name trexio)
 (synopsis "Binding for the TREXIO Input/Output library")
 (description "TREXIO is a file format and library for storing wave functions and integrals for quantum chemistry.")
 (depends
  dune
  (dune-configurator :build)
  (conf-pkg-config :build))
 (tags
  ("Quantum chemistry" "Library"))
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
